# DataPipelineHub

./: .gitignore  README.md  dataset_analysis.ipynb  fl_splitter.ipynb  predictions.npz  pyproject.toml  scores.ipynb  scores_.ipynb  splitter.py  test.ipynb
configs/: ds_analysis.yml  wandb.yml
src/: fl_splitter.ipynb  main.py  pandas_splitter.ipynb  plot_generator.ipynb  scores.ipynb
src/commands/: app_analyzer.py  app_split.py
src/dataset_analysis/: utils.py
src/results_analysis/: explainability.py
src/utils/: path.py  sitk.py  utils.py
