[tool.poetry]
name = "chest-xray-covid"
version = "0.1.0"
description = "This package provides a dataset (images) analyzer module used for exploration and statistics over the data"
authors = ["Irina Rakotoarisedy"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.scripts]
dataset_app = "src.main:app"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.7.1"
typer = "^0.12.3"
rich = "^13.7.1"
trogon = "^0.5.0"
torch = "^2.3.0"
lightning = "^2.2.4"
torchvision = "^0.18.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
omegaconf = "^2.3.0"
opencv-python = "^4.9.0.80"
pyyaml = "^6.0.1"
ipywidgets = "^8.1.2"
split-folders = "^0.5.1"
scikit-learn = "^1.4.2"
wandb = "^0.17.0"
xplique = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
